<resources>
    <string name="app_name">Etiquette</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1022454481098401</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">Etiquette</string>

    <string name="welcome">Welcome!</string>
    <string name="look_around">Have a look around.</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="term_and_condition"><u>Term&amp;Conditions</u></string>
    <string name="already_have_account"><u>Already have an account? <b>SIGN IN</b></u></string>
    <string name="dont_have_account"><u>Don\'t have account? <b>SIGN UP</b></u></string>
    <string name="sign_in_with">Sign in with:</string>
    <string name="phone_email">Phone Number/Email</string>
    <string name="password">Password</string>
    <string name="latest_text">LATEST</string>
    <string name="popular_text">POPULAR</string>
    <string name="categories_text">CATEGORIES</string>
    <string name="username_text">Username</string>
    <string name="preferred_location_text">Preferred Location</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="email_text">Email</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="profile_text">PROFILE</string>
    <string name="loading_text">Loading</string>
    <string name="logging_in_text">Logging In</string>
    <string name="check_internet">Check internet connection and try again</string>
    <string name="incorrect_email_password">Incorrect email/password</string>
    <string name="fill_details">Please fill all details</string>
    <string name="signing_up_text">Signing Up</string>
    <string name="account_exist">Account already exist</string>
    <string name="unable_login">Unable to sign in</string>
    <string name="travel_text">TRAVEL</string>
    <string name="select_option">SELECT ANY OPTION</string>
    <string name="choose_correct_option"><u>YOU HAVE CHOOSEN CORRECT OPTION</u></string>
    <string name="choose_wrong_option"><u>LOOK WHAT IS APPROPRITE SUGGESTION</u></string>
    <string name="option_1">OPTION 1</string>
    <string name="option_2">OPTION 2</string>
    <string name="option_3">OPTION 3</string>
    <string name="option_4">OPTION 4</string>
    <string name="sign_out_text">SIGN OUT</string>
    <string name="home">HOME</string>
    <string name="discover">DISCOVER</string>
    <string name="add_scenario_text">ADD SCENARIO</string>
    <string name="settings">SETTINGS</string>
    <string name="fetching_data_text">Fetching Data</string>

</resources>
