<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/homeicon"
            android:title="@string/home" />

        <item
            android:id="@+id/discover"
            android:checked="false"
            android:icon="@drawable/see"
            android:title="@string/discover" />

        <item
            android:id="@+id/addScenario"
            android:checked="false"
            android:icon="@drawable/foler_icon"
            android:title="@string/add_scenario_text" />

        <item
            android:id="@+id/profile"
            android:checked="false"
            android:icon="@drawable/avatar"
            android:title="@string/profile_text" />

        <item
            android:id="@+id/setting"
            android:checked="false"
            android:icon="@drawable/gear_icon"
            android:title="@string/settings" />

    </group>


</menu>