<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="pk.edu.pucit.mian.loginapp.SignUpFragment"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!--
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"

        android:src="@drawable/sign_up_text"
        android:layout_marginTop="20dp"/>
        -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_header"
        android:textSize="25sp"
        android:text="@string/sign_up_text"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"

        android:layout_marginTop="57dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_email"
        android:layout_marginTop="44dp"
        android:background="@drawable/email"
        android:hint="@string/phone_email"
        android:lines="1"
        android:maxLength="25"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center"
        android:gravity="center"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_password"
        android:background="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lines="1"
        android:maxLines="1"
        android:password="true"
        android:singleLine="true"
        android:maxLength="25" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_button"

        android:layout_marginTop="22dp"
        android:background="@drawable/sign_up_button" />

    <!--
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goto_login"

        android:layout_marginTop="40dp"
        android:src="@drawable/already_have_account"
        android:clickable="true" />
        -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goto_login"

        android:layout_marginTop="40dp"
        android:text="@string/already_have_account"
        android:clickable="true" />

    <!--
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/terms_and_conditions"

        android:layout_marginTop="76dp" />
        -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:text="@string/term_and_condition"

        android:layout_marginTop="66dp" />

</LinearLayout>
