<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="pk.EA.Scenario.app.Etiquette.fragments.LoginFragment"

    android:gravity="center_horizontal"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_text"
        android:layout_marginTop="20dp"
        android:textSize="25sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView23"
        android:layout_below="@+id/sign_in_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/email"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/imageView23"
        android:gravity="center"
        android:hint="@string/phone_email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1"
        android:maxLength="25" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_below="@+id/login_email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/password"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lines="1"
        android:maxLines="1"
        android:hint="@string/password"
        android:maxLength="25"
        android:singleLine="true"
        android:password="true"
        android:inputType="textPassword" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginTop="22dp"
        android:background="@drawable/sign_in_button"
        android:layout_below="@+id/login_password"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignStart="@+id/login_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView24"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in_with"
        android:layout_marginBottom="10dp"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/imageView24"
    android:layout_alignLeft="@+id/login_button"
    android:layout_alignStart="@+id/login_button"
    android:layout_alignRight="@+id/login_button"
    android:layout_alignEnd="@+id/login_button"
    android:orientation="horizontal"
    android:id="@+id/linearLayout2">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/facebook_login"
        android:background="@drawable/fb_button"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/google_login"
        android:background="@drawable/google_button"

        android:layout_marginLeft="20dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wechat_login"
        android:background="@drawable/wechat_button"
        android:layout_marginLeft="20dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weibo_login"
        android:background="@drawable/weibo_button"
        android:layout_marginLeft="20dp" />
</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goto_signup"
        android:text="@string/dont_have_account"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
