<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pk.EA.Scenario.app.Etiquette.fragments.WrongAnswerFragment"
    android:weightSum="10"
    android:orientation="vertical">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/headerbar"
        android:id="@+id/relativeLayout">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/leftmenu"
            android:id="@+id/drawMenu"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/travel_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/worldlocation" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/overlaybg"
        android:layout_weight="9.2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/thumbsdown"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_wrong_option"
            android:layout_marginTop="20dp"
            android:id="@+id/goto_answer"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <FrameLayout
                android:layout_width="270dp"
                android:layout_height="35dp">
                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:progress="85"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1"
                    android:layout_gravity="center"
                    android:textColor="#000000"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="85%"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <FrameLayout
                android:layout_width="270dp"
                android:layout_height="35dp">
                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:progress="50"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_2"
                    android:layout_gravity="center"
                    android:textColor="#000000"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50%"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <FrameLayout
                android:layout_width="270dp"
                android:layout_height="35dp">
                <ProgressBar
                    android:id="@+id/progressBar3"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:progress="29"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_3"
                    android:layout_gravity="center"
                    android:textColor="#000000"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="29%"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <FrameLayout
                android:layout_width="270dp"
                android:layout_height="35dp">
                <ProgressBar
                    android:id="@+id/progressBar4"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:progress="15"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_4"
                    android:layout_gravity="center"
                    android:textColor="#000000"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15%"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:textColor="#ffffff"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
